LPD-88575 Get AIRequests under certain domain only
